update of intro and data

--- a/London_restaurants_Capstone_Project.ipynb
+++ b/London_restaurants_Capstone_Project.ipynb
@@ -40,7 +40,7 @@
    "metadata": {},
    "source": [
     "## Data usage\n",
-    "The data on the venues will be used to cluster boroughs depending on the statistical attractiveness for opening a restaurant. Depending on the level of income of the working and living population, an adjustment function will be added to the cluster label of borough, to clarifying the attractiveness of opening a restaurant in this location."
+    "The data on the venues will be used with K-Means clustering model to analyze different clusters of boroughs and determine the best location to start a restaurant business. Depending on the level of income of the working and living population, an adjustment function will be added to the cluster label of borough, to clarifying the attractiveness of opening a restaurant in this location."
    ]
   },
   {
